clang/test/BSC/Negative/Method/Union/union_instance_function_redefinition/union_instance_function_redefinition.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

union SimpleUnion {
  float uf;
  int ui;
  char uc;
};

int union SimpleUnion::getA(union SimpleUnion* this);
int union SimpleUnion::getA(union SimpleUnion* this);

int main() {
  union SimpleUnion u = {.ui = 1};
  u.getA();
  return 0;
}

int union SimpleUnion::getA(union SimpleUnion * this) { // expected-note {{previous definition is here}}
  return this->ui;
}

int union SimpleUnion::getA(union SimpleUnion * this) { // expected-error {{redefinition of 'getA'}}
  return this->ui;
}
